fix search bar overlap on mid-size screens

--- a/app/components/ui/search/styles.scss
+++ b/app/components/ui/search/styles.scss
@@ -308,7 +308,7 @@
 	}
 
 	@include breakpoint( '<660px' ) {
-		margin-top: 61px;
+		margin-top: 81px;
 	}
 
 	@include breakpoint( '<480px' ) {
